# android-helper

./: .gitignore  DEV.md  README.md  android_helper.py  pyproject.toml  run
.github/workflows/: ci.yml
android_helper/: cli.py
android_helper/actions/: debloat.py  install_reinstall.py
android_helper/utils/: adb.py  io.py
config/moto/: debloat.list  protect.list
config/xiaomi_hyperos/: debloat.list  protect.list
config/xiaomi_miui/: debloat.list  protect.list
src/android_helper/: constants.py  menu.py
src/android_helper/actions/: debloat.py  install_apk.py  install_playstore.py  install_reinstall.py
src/android_helper/utils/: adb.py  log.py
