[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-helper"
version = "2.0.0"
requires-python = ">=3.10"
description = "Android Debloat & Install Helper (multi-profile)"
readme = "README.md"

[project.scripts]
android-helper = "android_helper.cli:main"

[tool.setuptools]
# Wir sagen Setuptools EXPLIZIT, was ein Package ist
packages = ["android_helper"]

# Falls du lieber automatische Suche willst, dann so:
# [tool.setuptools.packages.find]
# include = ["android_helper*"]
# exclude = ["config*", "apks*", "state*", "tests*"]
